syntax = "proto3";

package auth;

option go_package = "api/auth";

service AuthService {
  rpc Login(LoginRequest) returns (TokenResponse);
  rpc Refresh(RefreshRequest) returns (TokenResponse);
  rpc Register(RegisterRequest) returns (User);
}

message User {
  int64 id = 1;
  string username = 2;
}

message TokenResponse {
  string accessToken = 2;
  string refreshToken = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RefreshRequest {
  string refreshToken = 1;
}
